İşEmri sayfasının kayma sorunu giderildi.

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -7577,8 +7577,10 @@
     <Content Include="wwwroot\images\novasaydam.png" />
     <Content Include="wwwroot\js\BarcodeScanner.js" />
     <Content Include="wwwroot\js\BarcodeTrack.js" />
+    <Content Include="wwwroot\js\Login.js" />
     <Content Include="wwwroot\js\Site.js" />
     <Content Include="wwwroot\js\Utils.js" />
+    <Content Include="wwwroot\js\WatchObject.js" />
     <Content Include="wwwroot\libs\animate.css\animate.compat.css" />
     <Content Include="wwwroot\libs\animate.css\animate.compat.min.css" />
     <Content Include="wwwroot\libs\animate.css\animate.css" />
